--- a/src/pages/visit/visit-timeline/visit-timeline.scss
+++ b/src/pages/visit/visit-timeline/visit-timeline.scss
@@ -3,13 +3,13 @@ ion-app.ios page-visit-timeline {
   ion-content {
     .list-ios {
       button {
-        border-bottom: 0.55px solid #c8c7cc;
+        border-bottom: 0.55px solid $color-grey-2;
 
         .icon-ios {
           margin-left: 12px;
           margin-right: 0;
           z-index: 1;
-          background-color: #fff;
+          background-color: color($colors, light);
           font-size: 40px;
         }
 
@@ -19,7 +19,7 @@ ion-app.ios page-visit-timeline {
           margin-left: 15.4px;
           margin-right: 0;
           z-index: 1;
-          background-color: #fff;
+          background-color: color($colors, light);
           width: 25.5px;
           height: 27px;
         }
@@ -56,7 +56,7 @@ ion-app.ios page-visit-timeline {
             }
 
             .prs {
-              color: color($colors, primary);
+              color: color($colors, tertiary);
               font-weight: $font-weight-semi-bold;
             }
           }
@@ -75,7 +75,7 @@ ion-app.ios page-visit-timeline {
 
       button.timeline-checkin {
         .icon-ios {
-          color: $item-icon-light-gray;
+          color: $color-grey-2;
         }
 
         .timeline-bar {
@@ -105,9 +105,15 @@ ion-app.ios page-visit-timeline {
         }
       }
 
-      .item-block .item-inner {
-        border-bottom: none;
-      }
+      .item-block{
+        &.item-inner {
+          border-bottom: none;
+        }
+        
+        &:last-child{
+          border-color: $color-grey-2;
+        }
+      } 
     }
   }
 
@@ -117,6 +123,6 @@ ion-app.ios page-visit-timeline {
   }
 
   .divider-color {
-    color: $list-ios-header-font-color;
+    color: $color-grey-1;
   }
 }
