--- a/src/pages/testing/defects/add-defect-category/add-defect-category.scss
+++ b/src/pages/testing/defects/add-defect-category/add-defect-category.scss
@@ -1,7 +1,7 @@
 page-add-defect-category {
   .item-ios {
     ion-icon[item-end] {
-      color: $color-grey-2;
+      color: #c8c7cc;
     }
   }
 
