--- a/src/pages/testing/test-creation/test-cancel/test-cancel.scss
+++ b/src/pages/testing/test-creation/test-cancel/test-cancel.scss
@@ -12,7 +12,7 @@ page-test-cancel {
   .cancellation-info {
     padding: 0 16px;
     font-size: $font-size-small;
-    color: $color-grey-1;
+    color: $list-ios-header-font-color;
   }
 
 }
