--- a/src/pages/testing/vehicle/add-preparer/add-preparer.scss
+++ b/src/pages/testing/vehicle/add-preparer/add-preparer.scss
@@ -1,13 +1,6 @@
 page-add-preparer {
-
-  ion-content {
-    .scroll-content {
-      background: $color-grey-3;
-    }
-  }
-
   .item__preparer-name {
-    color: $color-grey-1;
+    color: $item-icon-light-gray;
   }
 
   .truncate-text {
@@ -27,13 +20,13 @@ page-add-preparer {
   .no-results__title {
     font-size: 19px;
     font-weight: 600;
-    color: $color-grey-2;
+    color: $item-icon-light-gray;
     display: inherit;
   }
 
   .no-results__text {
     font-size: 16px;
-    color: $color-grey-2;
+    color: $item-icon-light-gray;
     display: inherit;
   }
 
@@ -42,6 +35,6 @@ page-add-preparer {
     display: inherit;
     font-size: 16px;
     text-decoration: underline;
-    color: color($colors, tertiary);
+    color: color($colors, button-blue);
   }
 }
