--- a/src/pages/testing/vehicle/vehicle-lookup/vehicle-lookup.scss
+++ b/src/pages/testing/vehicle/vehicle-lookup/vehicle-lookup.scss
@@ -1,7 +1,7 @@
 page-vehicle-lookup {
   .custom-input {
     font-weight: 400;
-    border: 1px solid $color-grey-2;
+    border: 1px solid $item-icon-light-gray;
     border-radius: 5px;
     padding-left: 8px;
   }
@@ -11,6 +11,6 @@ page-vehicle-lookup {
   }
 
   .shadow {
-    box-shadow: 0 2px 2px $color-grey-2;
+    box-shadow: 0 2px 2px $item-icon-light-gray;
   }
 }
