--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -77,7 +77,7 @@
       }
 
       .searchbar-input {
-        background-color: $color-grey-4;
+        background-color: $light-gray;
       }
     }
   }
@@ -85,12 +85,6 @@
 
 .item-ios {
   padding-left: 0;
-
-  h1, h2, h3, h4,
-  p[text-left],
-  span[text-left]{
-    color: color($colors, dark);
-  }
 }
 
 .full-dividers-list {
@@ -140,8 +134,26 @@
   }
 }
 
+// Searchbars found in the header
+.header-ios ion-toolbar .searchbar-ios{
+
+  .searchbar-search-icon,
+  .searchbar-clear-icon{
+    filter: brightness(0) invert(1);
+  }
+
+  .searchbar-input{
+    background-color: rgba(255, 255, 255, 0.3);
+    color: color($colors, light);
+    
+    &::placeholder{
+      color: color($colors, light); 
+    }
+  } 
+}
+
 .content-background-color-grey {
-  background-color: $color-grey-3;
+  background-color: $content-background-color;
 }
 
 // Global CSS for item-dividers
@@ -159,10 +171,6 @@ ion-item-group {
       border-bottom: none !important;
     }
   }
-}
-
-.text-input-ios{
-  color: color($colors, dark);
 }
 
 .no-result {
@@ -194,27 +202,27 @@ ion-item-group {
 }
 // Registration plate
 .vehicle-header-vrm-number {
-  background: $color-reg-plate;
+  background: $reg-plate-color;
   width: 194px;
   height: 50px;
   font-size: $font-size-extra-large;
   font-weight: $font-weight-bold;
   line-height: 42px;
   border-radius: 8px;
-  color: color($colors, dark);
   border: 3px color($colors, dark) solid;
   margin: 24px auto;
 }
 
 // Vehicle list general style
 ion-list.vehicle-list{
-  border-bottom: 0.5px solid $color-grey-2;
+  border-bottom: 0.5px solid $list-ios-border-color;
   margin-bottom: 10px;
   background: color($colors, light);
 
   ion-list-header.list-header{
     height: $list-header-height-small;
-    border-bottom: 0.5px solid $color-grey-2;
+    background: $list-ios-header-background-color;
+    border-bottom: 0.5px solid $list-ios-border-color;
 
     ion-label{
       font-size: $font-size-small;
@@ -230,7 +238,7 @@ ion-list.vehicle-list{
 
   ion-item.item-ios{
     width: calc(100% - 16px);
-    border-bottom: 0.5px solid $color-grey-2;
+    border-bottom: 0.5px solid $list-ios-border-color;
 
     &:last-child{
       border-bottom: 0;
@@ -238,6 +246,7 @@ ion-list.vehicle-list{
     }
 
     ion-label{
+      color: $list-ios-header-font-color;
       font-weight: $font-weight-normal;
       line-height: 18px;
 
@@ -245,12 +254,14 @@ ion-list.vehicle-list{
         font-size: $font-size-medium;
         font-weight: $font-weight-normal;
         line-height: 22px;
+        color: color($colors, dark);
       }
 
       p[text-wrap]{
         font-size: $font-size-medium;
         font-weight: $font-weight-normal;
         line-height: 22px;
+        color: color($colors, dark);
       }
     }
 
@@ -259,13 +270,14 @@ ion-list.vehicle-list{
         font-size: $font-size-medium;
         font-weight: $font-weight-normal;
         line-height: 22px;
+        color: $list-ios-item-font-color;
       }
     }
   }
   button.item-ios {
     height: 60px;
     width: calc(100% - 16px);
-    border-bottom: 0.5px solid $color-grey-2;
+    border-bottom: 0.5px solid $list-ios-border-color;
 
     &:last-child{
       border-bottom: 0;
@@ -275,7 +287,6 @@ ion-list.vehicle-list{
     ion-label{
       h3{
         font-size: $font-size-medium;
-        color: color($colors, dark);
       }
     }
   }
@@ -288,9 +299,4 @@ ion-list.vehicle-list{
 .test-result{
   font-weight: $font-weight-semi-bold;
   font-size: $font-size-medium;
-}
-
-.badge-ios-light {
-  border: 1px solid color($colors, dark);
-  background-color: color($colors, light);
 }
