--- a/src/pages/atf/atf-search/atf-search.scss
+++ b/src/pages/atf/atf-search/atf-search.scss
@@ -13,7 +13,7 @@ page-atf-search {
   }
 
   .item-block {
-    border-bottom: 0.5px solid $color-grey-2;
+    border-bottom: 0.5px solid $list-ios-border-color;
   }
 
 }
