--- a/src/pages/testing/defects/add-defect-item/add-defect-item.scss
+++ b/src/pages/testing/defects/add-defect-item/add-defect-item.scss
@@ -1,7 +1,7 @@
 page-add-defect-item {
   .item-ios {
     ion-icon[item-end] {
-      color: $color-grey-2;
+      color: $item-icon-light-gray;
     }
   }
 
