--- a/src/pages/testing/defects/add-defect/add-defect.scss
+++ b/src/pages/testing/defects/add-defect/add-defect.scss
@@ -1,7 +1,7 @@
 page-add-defect {
   .item-ios {
     ion-icon[item-end] {
-      color: $color-grey-2;
+      color: $list-ios-border-color;
     }
   }
 
