--- a/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.scss
+++ b/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.scss
@@ -13,11 +13,7 @@ page-test-type-details-input {
 
   button.cancel {
     font-weight: $font-weight-normal;
-    color: color($colors, primary);
-  }
-
-  .color-grey-1{
-    color: $color-grey-1;
+    color: color($colors, button-blue);
   }
 
 }
