--- a/src/pages/testing/test-creation/test-types-list/test-types-list.scss
+++ b/src/pages/testing/test-creation/test-types-list/test-types-list.scss
@@ -1,7 +1,7 @@
 page-tests-types-list {
   .item-ios {
     ion-icon[item-end] {
-      color: $color-grey-2;
+      color: $item-icon-light-gray;
     }
   }
 
