--- a/src/pages/testing/test-submitted/test-submitted.scss
+++ b/src/pages/testing/test-submitted/test-submitted.scss
@@ -1,7 +1,7 @@
 ion-app.ios page-test-submitted {
   [padding] .scroll-content {
     padding: 0;
-    background-color: $color-grey-3;
+    background-color: #dee0e2;
   }
 
   ion-item.summary-message {
@@ -51,11 +51,11 @@ ion-app.ios page-test-submitted {
         }
 
         p {
-          color: color($colors, dark);
+          color: #000;
         }
 
         p.vehicle-registration {
-          color: $color-grey-1;
+          color: #8c8c8c;
           font-size: 12px;
         }
       }
@@ -63,6 +63,6 @@ ion-app.ios page-test-submitted {
   }
 
   ion-footer {
-    background-color: $color-grey-3;
+    background-color: #dee0e2;
   }
 }
