--- a/src/pages/testing/vehicle/vehicle-additional/vehicle-additional.scss
+++ b/src/pages/testing/vehicle/vehicle-additional/vehicle-additional.scss
@@ -7,7 +7,7 @@ ion-app.ios page-vehicle-additional {
   ion-content {
 
     .scroll-content {
-      background: $color-grey-3;
+      background: $content-background-color;
     }
   }
 }
