--- a/src/pages/testing/vehicle/vehicle-tyres/vehicle-tyres.scss
+++ b/src/pages/testing/vehicle/vehicle-tyres/vehicle-tyres.scss
@@ -7,7 +7,7 @@ ion-app.ios page-vehicle-tyres {
   ion-content {
 
     .scroll-content {
-      background: $color-grey-3;
+      background: $content-background-color;
     }
   }
 }
