--- a/src/pages/testing/vehicle/vehicle-weights/vehicle-weights.scss
+++ b/src/pages/testing/vehicle/vehicle-weights/vehicle-weights.scss
@@ -7,7 +7,7 @@ ion-app.ios page-vehicle-weights{
   ion-content {
     
     .scroll-content {
-      background: $color-grey-3;
+      background: $content-background-color;
     }
   }
 }
