--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -22,6 +22,7 @@ $app-direction: ltr;
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
 $title-font-family: "Arial Black", Gadget, sans-serif;
+$sf-pro-font-family: "SF Pro Text",  Gadget, sans-serif;
 
 $font-weight-normal: 400;
 $font-weight-semi-bold: 600;
