--- a/src/pages/testing/test-creation/complete-test/complete-test.scss
+++ b/src/pages/testing/test-creation/complete-test/complete-test.scss
@@ -113,5 +113,31 @@ ion-app.ios page-complete-test {
   .certificate-number-guidance {
     color: $color-grey-1;
   }
+
+  ion-header {
+    ion-navbar.toolbar.toolbar-ios.statusbar-padding {
+      height: 100px;
+      padding-top: 24px !important;
+    }
+  }
+
+  .scroll-content{
+    margin-top: 100px;
+  }
+
+  ion-item-divider{
+    height: 40px;
+
+    ion-label{
+      margin-top: 11px;
+    }
+  }
+
+  .test-type-name{
+    font-weight: $font-weight-bold;
+    font-size: $font-size-medium;
+
+  }
+
 }
 
