--- a/src/pages/testing/test-creation/complete-test/complete-test.scss
+++ b/src/pages/testing/test-creation/complete-test/complete-test.scss
@@ -113,5 +113,9 @@ ion-app.ios page-complete-test {
   .no-margin-right {
     margin-right: 0;
   }
+
+  .certificate-number-guidance {
+    color: $color-grey-1;
+  }
 }
 
