--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -315,6 +315,28 @@ ion-list.vehicle-list{
   border: 1px solid color($colors, dark);
 }
 
+.item-inner > ion-icon.ion-ios-arrow-forward{
+  font-size: $font-size-medium-2;
+  display: flex;
+  align-items: center;
+}
+
+.action-sheet-ios .action-sheet-button{
+  text-transform: capitalize;
+}
+
 .color-grey-1{
   color: $color-grey-1;
+}
+
+.color-grey-2{
+  color: $color-grey-2;
+}
+
+.margin-vertical-half{
+  margin: 8px 0;
+}
+
+.margin-left-half{
+  margin-left: 8px;
 }
