--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -31,6 +31,7 @@ $font-weight-bold: 700;
 $font-size-small: 13px;
 $font-size-normal: 15px;
 $font-size-medium: 17px;
+$font-size-medium-2: 21px;
 $font-size-large: 28px;
 $font-size-extra-large: 34px;
 
