--- a/src/pages/testing/test-creation/complete-test/complete-test.scss
+++ b/src/pages/testing/test-creation/complete-test/complete-test.scss
@@ -19,7 +19,7 @@ ion-app.ios page-complete-test {
   ion-icon[item-end].arrow-forward {
     display: flex;
     align-items: center;
-    font-size: 22px;
+    font-size: $font-size-medium-2;
     color: $color-grey-2;
   }
 
@@ -68,10 +68,6 @@ ion-app.ios page-complete-test {
 
     h3.defect-name {
       font-weight: bold;
-
-      span {
-        color: color($colors, danger);
-      }
     }
   }
 
