--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,6 +23,7 @@ $app-direction: ltr;
 
 $title-font-family: "Arial Black", Gadget, sans-serif;
 $sf-pro-font-family: "SF Pro Text",  Gadget, sans-serif;
+$sf-pro-display-font-family: "SF Pro Display",  Gadget, sans-serif;
 
 $font-weight-normal: 400;
 $font-weight-semi-bold: 600;
