--- a/src/pages/testing/defects/add-defect/add-defect.scss
+++ b/src/pages/testing/defects/add-defect/add-defect.scss
@@ -16,5 +16,10 @@ page-add-defect {
   .badge-text-black {
     color: color($colors, dark);
   }
+
+  .bold span{
+    font-weight: $font-weight-semi-bold;
+  }
+  
 }
 
